--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "dev:remix": "remix watch",
     "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch",
     "dev": "remix build && run-p \"dev:*\"",
-    "start": "cross-env NODE_ENV=production miniflare ./build/index.js"
+    "start": "cross-env NODE_ENV=production miniflare ./build/index.js",
+    "postinstall": "remix-esbuild-override"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.2.4",
+    "@mantine/hooks": "^5.2.4",
+    "@mantine/remix": "^5.2.4",
     "@remix-run/cloudflare": "^1.7.0",
     "@remix-run/cloudflare-workers": "^1.7.0",
     "@remix-run/react": "^1.7.0",
@@ -19,6 +25,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@remix-run/dev": "^1.7.0",
     "@remix-run/eslint-config": "^1.7.0",
     "@types/react": "^17.0.47",
@@ -26,6 +33,7 @@
     "eslint": "^8.20.0",
     "miniflare": "^2.6.0",
     "npm-run-all": "^4.1.5",
+    "remix-esbuild-override": "^3.0.4",
     "typescript": "^4.7.4",
     "wrangler": "^2.0.22"
   },
